# WEB-DATA

./: README.md  Working_with_Data_outputs-Aquib Hussain.ipynb  pyproject.toml  setup.py
src/web_data/: __main__.py  earthquake_api.py  nbc_news.py  web_scraping.py
web_data/: EARTHQUAKE_API.py  NBC_NEWS.py  Web_Scraping.py
